# ssc-ridge-tools

./: .gitignore  Makefile  Makefile.am  README  TODO  barracks-flip.tif  barracks-train.tif  barracks.tif  configure.ac  conv_csv.c  conv_mask.c  conv_svg.c  eigen.c  export.c  eye.tif  filter.c  floattiff.c  floattiff.h  gui_ridges.c  gui_surface.c  libridgetool.pc.in  line.c  metrics.c  ridgebayes.c  ridgeclassexport.1  ridgeclassexport.c  ridgeclassstat.1  ridgeclassstat.c  ridgeconv.1  ridgeconv.c  ridgeconv.h  ridgecull.1  ridgecull.c  ridgedemo.m  ridgeextract.m  ridgeextract_box.m  ridgeio.h  ridgeio_array.c  ridgeio_data.c  ridgeio_line.c  (+23 more)
C/: .gitignore  Makefile  Makefile.am  configure.ac  conv_csv.c  conv_svg.c  conv_tif.c  eigen.c  export.c  filter.c  gaussfilt.c  gui_ridges.c  gui_showimage.c  gui_surface.c  line.c  metrics.c  multiproc.c  qr-symmv.c  ridgeconv.c  ridgeconv.h  ridgecull.c  ridgeio.h  ridgeio_array.c  ridgeio_data.c  ridgeio_line.c  ridgeio_lowlvl.c  ridgeio_point.c  ridgeio_segment.c  ridges.c  ridgetool.c  ridgetool.h  ridgetool_gui.h  ridgeutil.h  show-tiff.c  surface.c
MATLAB/: best_ridges.m  boxfilter.m  boxintegral.m  integralimage.m  ridgedemo.m  ridgedemo_box.m  ridgeextract.m  ridgeextract_box.m  ridgeplot.m
libguile-tiffio/: tiffio-test.scm  tiffio.c
python/: blbayes.py  fisher.py  mputils.py  ridgeextract.py  ridgelines.py  rtool.py  scalespace.py
scm/: unit-test.scm
scm/ssc/: arrays.scm  tiff.scm
scm/ssc/improc/: curvature.scm  integral-image.scm  kernels.scm
scm/ssc/maths/: convolve.scm
scm/unit-tests/: t0001-tiff.scm  t0002-integral-image.scm  t0003-curvature.scm  t0004-convolve.scm  t0005-kernels.scm
